Kubernetes/clusters/home/authelia/heimdall/service.yml
apiVersion: v1
kind: Service
metadata:
  name: heimdall-service
  namespace: authelia
spec:
  selector:
    app: heimdall
  ports:
    - name: http-80
      protocol: TCP
      port: 80
    - name: https-443
      protocol: TCP
      port: 443
