Kubernetes/clusters/home/authelia/heimdall/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: heimdall-ingress
  namespace: authelia
  annotations:
    kubernetes.io/ingress.class: "nginx" 
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    kubernetes.io/ingress.allow-http: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-url: "http://authelia-service.authelia.svc.cluster.local/api/verify"
    nginx.ingress.kubernetes.io/auth-signin: "https://authelia.patroner.org/"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  rules:
  - host: heimdall.patroner.org
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: heimdall-service
            port: 
              number: 80
  tls:
  - hosts:
    - heimdall.patroner.org
    secretName: heimdal-patron-tls
